fixed margin on mobile

--- a/Digital Business Card/src/index.css
+++ b/Digital Business Card/src/index.css
@@ -137,6 +137,7 @@ p {
 @media (max-width: 500px) {
   .container {
     max-width: 100%;
+    margin-top: 0;
   }
 
   body {
